set01/problem07_compile_errors.txt
Compilation started at 11/2/2023, 4:18:33 PM
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem07.c: In function 'main':
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem07.c:38:5: error: too many arguments to function 'output'
     output(n, sum);
     ^~~~~~
c:\Users\amogh\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-DrLexLuthor\set01\problem07.c:26:6: note: declared here
 void output(int sum){
      ^~~~~~
Compilation finished at 11/2/2023, 4:18:33 PM
Compilation started at 11/14/2023, 2:09:33 PM
Compilation finished at 11/14/2023, 2:09:34 PM
